refactor: Optimize GroupService logic and fix build configuration
- Refactor `GroupService` to use `ChunkInfo` record for claim management and standardize permission/leader checks
- Fix version bumping logic in `build.gradle` to correctly handle array modification
- Add error handling and logging for file creation in `JsonStorage`
- Modernize `ChatFormatter` to use `getLast()` and make `groupService` final in `CreateGroupCommand`
- Update documentation and bump plugin version to 0.0.12